--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,8 @@
     <color name="colorPrimary">#bababa</color>
 
     <!-- 导航栏颜色 -->
-    <color name="colorPrimaryDark">#3d3d3d</color>
-    <color name="colorAccent">#9b9b9b</color>
+    <color name="colorPrimaryDark">#39C5BB</color>
+    <color name="colorAccent">#39C5BB</color>
 
     <color name="light_blue_50">#FFE1F5FE</color>
     <color name="light_blue_200">#FF81D4FA</color>
